# PC-Club-Manager

./: CMakeLists.txt  README.md
include/: manager.h
src/: main.cpp  manager.cpp
tests/: tests.cpp
